@@ -1,3 +1,21 @@
+------------------[ once you've read this, delete it ]---------------------
+
+ENGINE DEVELOPERS - HEED THIS!
+
+This is a sample README file to guide your users when they are installing 
+what is undoubtedly going to be the finest piece of code they ever got
+their hands on. Lucky them, but alas they are often foolish, and so this
+is where you can guide them with the metaphorical beating of twigs. Or just
+a numbered series of instructions.
+
+ANYWAY - you will almost certainly need to tailor this to your specific 
+engine. Please check the engine development information on the Rails 
+Engines wiki for more information about what to do now:
+  
+  http://rails-engines.rubyforge.org/wiki/wiki.pl?DevelopingAnEngine
+
+-----------------------[ remember to cut me out ]--------------------------
+
 = <%= engine_class_name %>
 
 <%= engine_class_name %> is a ...
@@ -10,7 +28,7 @@
 
 3. Modify your Engines.start call in config/environment.rb
 
-    Engines.start :<%= engine_start_name %>
+    Engines.start :<%= engine_start_name %> # or :<%= engine_underscored_name %>
 
 4. Edit your application.rb file so it looks something like the following:
 
